hard-gists/e223622e255bd5b8c9130407397a0494/run.log
=== Docker Run Log for e223622e255bd5b8c9130407397a0494 ===
Started at: Mi 29. Okt 20:40:05 CET 2025

[2025-10-29 20:40:05] START: Running container for e223622e255bd5b8c9130407397a0494
[2025-10-29 20:40:06] SUCCESS: Container 5b7ce1b5ec2ab45e4612cf800cbb68ceee0c439c1bb3c6a72b81fdb783ce9a64 started for e223622e255bd5b8c9130407397a0494
=== Container logs for e223622e255bd5b8c9130407397a0494 ===
  File "/snippet.py", line 87
    print row, col, path, ax, peak, use_cqt
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e223622e255bd5b8c9130407397a0494 ===
[2025-10-29 20:40:08] INFO: Container 5b7ce1b5ec2ab45e4612cf800cbb68ceee0c439c1bb3c6a72b81fdb783ce9a64 has stopped
